# py-promises

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pypromises/: fire_and_forget.py  promise.py
tests/: all.py  then.py  wait.py
